--- a/index.html
+++ b/index.html
@@ -1,20 +1,80 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>KOCHAM</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css">
-<link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">   
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Laurka dla Asi</title>
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+<style>
+  body {
+    font-family: 'Indie Flower', cursive;
+    margin: 0;
+    padding: 0;
+    background-color: #f7f7f7;
+    background-image: url('heart-background.gif');
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+  
+  #card {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 400px;
+  }
+  
+  #card h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
+  }
+  
+  #card p {
+    font-size: 18px;
+    line-height: 1.5;
+  }
+  
+  #daysCount {
+    font-weight: bold;
+    font-size: 24px;
+    color: #e74c3c;
+  }
+</style>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div class="shuffle_text">
-  Na naszej planecie żyje pięć miliardów ludzi, tymczasem człowiek zakochuje się w jakiejś jednej osobie i nie wiadomo dlaczego, nie chce jej zmieniać na żadną inną. <p id="userMsg2"></p> Kocham Cię 🎔
+<div id="card">
+  <h2>Dla Asi</h2>
+  <p>
+    Kochana Asiu,
+    <br>
+    Twoja miłość oświetla moją duszę,
+    <br>
+    W Twoich oczach odnajduję szczęście,
+    <br>
+    Razem kroczymy przez życie, w miłości spleceni.
+    <br>
+    Już minęło <span id="daysCount"></span> dni naszej wspólnej podróży.
+  </p>
 </div>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://risegadgets.googlecode.com/svn/test/Blog/ShuffleLetters/jquery.shuffleLetters.js'></script><script  src="./script.js"></script>
+<script>
+  // Data początku związku
+  const startDate = new Date('2019-08-23');
+  
+  // Obecna data
+  const currentDate = new Date();
+  
+  // Obliczenie różnicy w dniach
+  const timeDiff = Math.abs(currentDate - startDate);
+  const daysCount = Math.ceil(timeDiff / (1000 * 60 * 60 * 24));
+  
+  // Uzupełnienie ilości dni w tekście laurki
+  const daysCountElement = document.getElementById('daysCount');
+  daysCountElement.textContent = daysCount;
+</script>
 </body>
 </html>
